update detialMap Annotation

--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -3683,6 +3683,9 @@ Two times at WWDC!</string>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="g5u-IO-TJj" secondAttribute="height" multiplier="20:9" id="V1c-ia-7CB"/>
                                                 </constraints>
+                                                <connections>
+                                                    <outlet property="delegate" destination="bj9-Te-WTq" id="6Oh-kU-w6L"/>
+                                                </connections>
                                             </mapView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My WWDC App" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ggs-oG-RhV">
                                                 <rect key="frame" x="20" y="823" width="560" height="27"/>
@@ -5059,18 +5062,20 @@ Two times at WWDC!</string>
                                 <exclude reference="BbM-nF-pSR"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="AuK-bR-fIk"/>
-                                <exclude reference="byb-Ih-ybX"/>
-                                <exclude reference="kbn-4U-gZZ"/>
-                                <exclude reference="nBc-cz-MqJ"/>
-                                <exclude reference="uPg-9Q-CBK"/>
-                                <exclude reference="24i-T5-rZH"/>
-                                <exclude reference="25y-p8-sh6"/>
-                                <exclude reference="26i-zr-An1"/>
-                                <exclude reference="V7P-fl-Ud1"/>
-                                <exclude reference="W6a-Da-2d6"/>
-                                <exclude reference="gwD-b3-qcv"/>
-                                <exclude reference="qeh-N6-D9x"/>
+                                <exclude reference="4AN-LW-8Jb"/>
+                                <exclude reference="FVN-HS-iRC"/>
+                                <exclude reference="PjX-TD-DKr"/>
+                                <exclude reference="g5O-mk-Xx1"/>
+                                <exclude reference="jIb-2v-bO5"/>
+                                <exclude reference="lPr-hN-37i"/>
+                                <exclude reference="sQa-I8-cml"/>
+                                <exclude reference="u4e-hm-ThN"/>
+                                <exclude reference="C3m-RR-vOq"/>
+                                <exclude reference="CeV-Vn-6ee"/>
+                                <exclude reference="JGi-1x-tpP"/>
+                                <exclude reference="Qnv-Xc-ETG"/>
+                                <exclude reference="ZX1-wa-kys"/>
+                                <exclude reference="miB-VU-5IA"/>
                                 <exclude reference="Ax6-fn-YTl"/>
                                 <exclude reference="FPV-gS-6Tk"/>
                                 <exclude reference="VZO-M8-bcJ"/>
@@ -5078,12 +5083,6 @@ Two times at WWDC!</string>
                                 <exclude reference="INF-wv-CU7"/>
                                 <exclude reference="K3h-OE-6L2"/>
                                 <exclude reference="gv2-6v-1Gk"/>
-                                <exclude reference="C3m-RR-vOq"/>
-                                <exclude reference="CeV-Vn-6ee"/>
-                                <exclude reference="JGi-1x-tpP"/>
-                                <exclude reference="Qnv-Xc-ETG"/>
-                                <exclude reference="ZX1-wa-kys"/>
-                                <exclude reference="miB-VU-5IA"/>
                                 <exclude reference="09J-ra-kiD"/>
                                 <exclude reference="9bN-x4-6sv"/>
                                 <exclude reference="FPq-Yt-PGH"/>
@@ -5098,14 +5097,18 @@ Two times at WWDC!</string>
                                 <exclude reference="iaK-5b-xeI"/>
                                 <exclude reference="nuP-Yu-hB0"/>
                                 <exclude reference="t4t-hS-2ax"/>
-                                <exclude reference="4AN-LW-8Jb"/>
-                                <exclude reference="FVN-HS-iRC"/>
-                                <exclude reference="PjX-TD-DKr"/>
-                                <exclude reference="g5O-mk-Xx1"/>
-                                <exclude reference="jIb-2v-bO5"/>
-                                <exclude reference="lPr-hN-37i"/>
-                                <exclude reference="sQa-I8-cml"/>
-                                <exclude reference="u4e-hm-ThN"/>
+                                <exclude reference="24i-T5-rZH"/>
+                                <exclude reference="25y-p8-sh6"/>
+                                <exclude reference="26i-zr-An1"/>
+                                <exclude reference="V7P-fl-Ud1"/>
+                                <exclude reference="W6a-Da-2d6"/>
+                                <exclude reference="gwD-b3-qcv"/>
+                                <exclude reference="qeh-N6-D9x"/>
+                                <exclude reference="AuK-bR-fIk"/>
+                                <exclude reference="byb-Ih-ybX"/>
+                                <exclude reference="kbn-4U-gZZ"/>
+                                <exclude reference="nBc-cz-MqJ"/>
+                                <exclude reference="uPg-9Q-CBK"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -5118,25 +5121,20 @@ Two times at WWDC!</string>
                                 <include reference="BbM-nF-pSR"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="17X-1c-82O"/>
-                                <exclude reference="8Or-7s-l9c"/>
-                                <include reference="AuK-bR-fIk"/>
-                                <exclude reference="amS-im-Mr4"/>
-                                <include reference="byb-Ih-ybX"/>
-                                <exclude reference="hEr-MA-L17"/>
-                                <include reference="kbn-4U-gZZ"/>
-                                <include reference="nBc-cz-MqJ"/>
-                                <include reference="uPg-9Q-CBK"/>
-                                <exclude reference="z0t-yv-8Pq"/>
-                                <include reference="24i-T5-rZH"/>
-                                <include reference="25y-p8-sh6"/>
-                                <include reference="26i-zr-An1"/>
-                                <include reference="V7P-fl-Ud1"/>
-                                <exclude reference="W6a-Da-2d6"/>
-                                <include reference="gwD-b3-qcv"/>
-                                <include reference="qeh-N6-D9x"/>
-                                <exclude reference="rlm-4g-Kco"/>
-                                <exclude reference="zRN-CT-FvA"/>
+                                <include reference="4AN-LW-8Jb"/>
+                                <exclude reference="FVN-HS-iRC"/>
+                                <include reference="PjX-TD-DKr"/>
+                                <exclude reference="g5O-mk-Xx1"/>
+                                <include reference="jIb-2v-bO5"/>
+                                <exclude reference="lPr-hN-37i"/>
+                                <exclude reference="sQa-I8-cml"/>
+                                <exclude reference="u4e-hm-ThN"/>
+                                <include reference="C3m-RR-vOq"/>
+                                <exclude reference="CeV-Vn-6ee"/>
+                                <exclude reference="JGi-1x-tpP"/>
+                                <include reference="Qnv-Xc-ETG"/>
+                                <include reference="ZX1-wa-kys"/>
+                                <include reference="miB-VU-5IA"/>
                                 <include reference="Ax6-fn-YTl"/>
                                 <include reference="FPV-gS-6Tk"/>
                                 <include reference="VZO-M8-bcJ"/>
@@ -5144,12 +5142,6 @@ Two times at WWDC!</string>
                                 <exclude reference="INF-wv-CU7"/>
                                 <exclude reference="K3h-OE-6L2"/>
                                 <include reference="gv2-6v-1Gk"/>
-                                <include reference="C3m-RR-vOq"/>
-                                <exclude reference="CeV-Vn-6ee"/>
-                                <exclude reference="JGi-1x-tpP"/>
-                                <include reference="Qnv-Xc-ETG"/>
-                                <include reference="ZX1-wa-kys"/>
-                                <include reference="miB-VU-5IA"/>
                                 <exclude reference="09J-ra-kiD"/>
                                 <include reference="9bN-x4-6sv"/>
                                 <exclude reference="FPq-Yt-PGH"/>
@@ -5164,14 +5156,25 @@ Two times at WWDC!</string>
                                 <include reference="iaK-5b-xeI"/>
                                 <exclude reference="nuP-Yu-hB0"/>
                                 <exclude reference="t4t-hS-2ax"/>
-                                <include reference="4AN-LW-8Jb"/>
-                                <exclude reference="FVN-HS-iRC"/>
-                                <include reference="PjX-TD-DKr"/>
-                                <exclude reference="g5O-mk-Xx1"/>
-                                <include reference="jIb-2v-bO5"/>
-                                <exclude reference="lPr-hN-37i"/>
-                                <exclude reference="sQa-I8-cml"/>
-                                <exclude reference="u4e-hm-ThN"/>
+                                <include reference="24i-T5-rZH"/>
+                                <include reference="25y-p8-sh6"/>
+                                <include reference="26i-zr-An1"/>
+                                <include reference="V7P-fl-Ud1"/>
+                                <exclude reference="W6a-Da-2d6"/>
+                                <include reference="gwD-b3-qcv"/>
+                                <include reference="qeh-N6-D9x"/>
+                                <exclude reference="rlm-4g-Kco"/>
+                                <exclude reference="zRN-CT-FvA"/>
+                                <exclude reference="17X-1c-82O"/>
+                                <exclude reference="8Or-7s-l9c"/>
+                                <include reference="AuK-bR-fIk"/>
+                                <exclude reference="amS-im-Mr4"/>
+                                <include reference="byb-Ih-ybX"/>
+                                <exclude reference="hEr-MA-L17"/>
+                                <include reference="kbn-4U-gZZ"/>
+                                <include reference="nBc-cz-MqJ"/>
+                                <include reference="uPg-9Q-CBK"/>
+                                <exclude reference="z0t-yv-8Pq"/>
                             </mask>
                         </variation>
                     </view>
