Move segmented control down

--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -3830,7 +3830,7 @@ Two times at WWDC!</string>
                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <imageView clipsSubviews="YES" tag="100" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="no-profile" translatesAutoresizingMaskIntoConstraints="NO" id="B9l-N8-A8C" customClass="AsyncImageView">
+                                                                <imageView clipsSubviews="YES" tag="100" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-profile" translatesAutoresizingMaskIntoConstraints="NO" id="B9l-N8-A8C" customClass="AsyncImageView">
                                                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                                 </imageView>
                                                             </subviews>
@@ -5004,18 +5004,18 @@ Two times at WWDC!</string>
                             <constraint firstItem="LP0-YZ-pcz" firstAttribute="trailing" secondItem="0wG-oj-9i7" secondAttribute="trailing" id="25y-p8-sh6"/>
                             <constraint firstItem="LP0-YZ-pcz" firstAttribute="leading" secondItem="0wG-oj-9i7" secondAttribute="leading" id="26i-zr-An1"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ayj-cf-GR6" secondAttribute="trailing" constant="-19" id="4AN-LW-8Jb"/>
+                            <constraint firstItem="BbM-nF-pSR" firstAttribute="leading" secondItem="MyJ-rq-Yku" secondAttribute="leadingMargin" constant="88" id="84L-P4-1bv"/>
                             <constraint firstItem="MlJ-U5-HGS" firstAttribute="leading" secondItem="MyJ-rq-Yku" secondAttribute="leading" id="8Or-7s-l9c"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="bottom" secondItem="IJ0-4j-GkO" secondAttribute="top" id="9bN-x4-6sv"/>
                             <constraint firstItem="MlJ-U5-HGS" firstAttribute="top" secondItem="LP0-YZ-pcz" secondAttribute="bottom" id="AuK-bR-fIk"/>
-                            <constraint firstItem="BbM-nF-pSR" firstAttribute="centerX" secondItem="LP0-YZ-pcz" secondAttribute="centerX" id="Ax6-fn-YTl"/>
                             <constraint firstItem="HO0-Sc-Wtn" firstAttribute="leading" secondItem="MyJ-rq-Yku" secondAttribute="leadingMargin" constant="-23" id="C3m-RR-vOq"/>
                             <constraint firstItem="HO0-Sc-Wtn" firstAttribute="leading" secondItem="0wG-oj-9i7" secondAttribute="trailing" constant="-131" id="CeV-Vn-6ee"/>
-                            <constraint firstItem="BbM-nF-pSR" firstAttribute="leading" secondItem="LP0-YZ-pcz" secondAttribute="trailing" constant="-296" id="FPV-gS-6Tk"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="leading" secondItem="HO0-Sc-Wtn" secondAttribute="trailing" constant="68" id="FPq-Yt-PGH"/>
                             <constraint firstItem="Ayj-cf-GR6" firstAttribute="centerY" secondItem="0wG-oj-9i7" secondAttribute="centerY" constant="61.5" id="FVN-HS-iRC"/>
                             <constraint firstItem="0wG-oj-9i7" firstAttribute="leading" secondItem="jd6-Qe-8fv" secondAttribute="leading" id="INF-wv-CU7"/>
                             <constraint firstItem="HO0-Sc-Wtn" firstAttribute="centerY" secondItem="0wG-oj-9i7" secondAttribute="centerY" constant="11.75" id="JGi-1x-tpP"/>
                             <constraint firstItem="0wG-oj-9i7" firstAttribute="centerY" secondItem="jd6-Qe-8fv" secondAttribute="centerY" constant="-54" id="K3h-OE-6L2"/>
+                            <constraint firstItem="BbM-nF-pSR" firstAttribute="top" secondItem="6Ph-6h-tBi" secondAttribute="bottom" constant="22" id="L2b-Nb-kBV"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="bottom" secondItem="IJ0-4j-GkO" secondAttribute="top" id="MTK-bx-Qxd"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Ayj-cf-GR6" secondAttribute="bottom" constant="-8" id="PjX-TD-DKr"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="centerX" secondItem="0wG-oj-9i7" secondAttribute="centerX" id="Qcw-fP-Eed"/>
@@ -5023,10 +5023,10 @@ Two times at WWDC!</string>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="top" secondItem="MlJ-U5-HGS" secondAttribute="bottom" constant="67" id="SZm-ek-t3T"/>
                             <constraint firstItem="LP0-YZ-pcz" firstAttribute="leading" secondItem="MyJ-rq-Yku" secondAttribute="leading" id="V7P-fl-Ud1"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="top" secondItem="MlJ-U5-HGS" secondAttribute="bottom" constant="67" id="V8c-FV-FMe"/>
-                            <constraint firstItem="BbM-nF-pSR" firstAttribute="top" secondItem="6Ph-6h-tBi" secondAttribute="bottom" constant="8" symbolic="YES" id="VZO-M8-bcJ"/>
                             <constraint firstAttribute="centerX" secondItem="LP0-YZ-pcz" secondAttribute="centerX" id="W6a-Da-2d6"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="leading" secondItem="HO0-Sc-Wtn" secondAttribute="trailing" constant="68" id="WaD-0L-1zA"/>
                             <constraint firstItem="HO0-Sc-Wtn" firstAttribute="top" secondItem="MlJ-U5-HGS" secondAttribute="bottom" constant="21" id="ZX1-wa-kys"/>
+                            <constraint firstItem="BbM-nF-pSR" firstAttribute="centerX" secondItem="LP0-YZ-pcz" secondAttribute="centerX" id="a0L-Ed-hak"/>
                             <constraint firstAttribute="trailing" secondItem="MlJ-U5-HGS" secondAttribute="trailing" id="amS-im-Mr4"/>
                             <constraint firstAttribute="trailing" secondItem="MlJ-U5-HGS" secondAttribute="trailing" id="byb-Ih-ybX"/>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="leading" secondItem="HO0-Sc-Wtn" secondAttribute="trailing" constant="68" id="eAR-jI-QQG"/>
@@ -5050,6 +5050,7 @@ Two times at WWDC!</string>
                             <constraint firstItem="jd6-Qe-8fv" firstAttribute="bottom" secondItem="IJ0-4j-GkO" secondAttribute="top" id="t4t-hS-2ax"/>
                             <constraint firstItem="Ayj-cf-GR6" firstAttribute="leading" secondItem="jd6-Qe-8fv" secondAttribute="trailing" constant="63" id="u4e-hm-ThN"/>
                             <constraint firstItem="MlJ-U5-HGS" firstAttribute="leading" secondItem="0wG-oj-9i7" secondAttribute="leading" id="uPg-9Q-CBK"/>
+                            <constraint firstItem="LP0-YZ-pcz" firstAttribute="leading" secondItem="BbM-nF-pSR" secondAttribute="trailing" constant="-296" id="uoy-N2-uSM"/>
                             <constraint firstAttribute="bottom" secondItem="MlJ-U5-HGS" secondAttribute="bottom" id="z0t-yv-8Pq"/>
                             <constraint firstItem="LP0-YZ-pcz" firstAttribute="top" secondItem="6Ph-6h-tBi" secondAttribute="bottom" id="zRN-CT-FvA"/>
                         </constraints>
@@ -5062,27 +5063,32 @@ Two times at WWDC!</string>
                                 <exclude reference="BbM-nF-pSR"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="4AN-LW-8Jb"/>
-                                <exclude reference="FVN-HS-iRC"/>
-                                <exclude reference="PjX-TD-DKr"/>
-                                <exclude reference="g5O-mk-Xx1"/>
-                                <exclude reference="jIb-2v-bO5"/>
-                                <exclude reference="lPr-hN-37i"/>
-                                <exclude reference="sQa-I8-cml"/>
-                                <exclude reference="u4e-hm-ThN"/>
+                                <exclude reference="AuK-bR-fIk"/>
+                                <exclude reference="byb-Ih-ybX"/>
+                                <exclude reference="kbn-4U-gZZ"/>
+                                <exclude reference="nBc-cz-MqJ"/>
+                                <exclude reference="uPg-9Q-CBK"/>
+                                <exclude reference="24i-T5-rZH"/>
+                                <exclude reference="25y-p8-sh6"/>
+                                <exclude reference="26i-zr-An1"/>
+                                <exclude reference="V7P-fl-Ud1"/>
+                                <exclude reference="W6a-Da-2d6"/>
+                                <exclude reference="gwD-b3-qcv"/>
+                                <exclude reference="qeh-N6-D9x"/>
+                                <exclude reference="uoy-N2-uSM"/>
+                                <exclude reference="84L-P4-1bv"/>
+                                <exclude reference="L2b-Nb-kBV"/>
+                                <exclude reference="a0L-Ed-hak"/>
+                                <exclude reference="iHf-3C-km3"/>
+                                <exclude reference="INF-wv-CU7"/>
+                                <exclude reference="K3h-OE-6L2"/>
+                                <exclude reference="gv2-6v-1Gk"/>
                                 <exclude reference="C3m-RR-vOq"/>
                                 <exclude reference="CeV-Vn-6ee"/>
                                 <exclude reference="JGi-1x-tpP"/>
                                 <exclude reference="Qnv-Xc-ETG"/>
                                 <exclude reference="ZX1-wa-kys"/>
                                 <exclude reference="miB-VU-5IA"/>
-                                <exclude reference="Ax6-fn-YTl"/>
-                                <exclude reference="FPV-gS-6Tk"/>
-                                <exclude reference="VZO-M8-bcJ"/>
-                                <exclude reference="iHf-3C-km3"/>
-                                <exclude reference="INF-wv-CU7"/>
-                                <exclude reference="K3h-OE-6L2"/>
-                                <exclude reference="gv2-6v-1Gk"/>
                                 <exclude reference="09J-ra-kiD"/>
                                 <exclude reference="9bN-x4-6sv"/>
                                 <exclude reference="FPq-Yt-PGH"/>
@@ -5097,18 +5103,14 @@ Two times at WWDC!</string>
                                 <exclude reference="iaK-5b-xeI"/>
                                 <exclude reference="nuP-Yu-hB0"/>
                                 <exclude reference="t4t-hS-2ax"/>
-                                <exclude reference="24i-T5-rZH"/>
-                                <exclude reference="25y-p8-sh6"/>
-                                <exclude reference="26i-zr-An1"/>
-                                <exclude reference="V7P-fl-Ud1"/>
-                                <exclude reference="W6a-Da-2d6"/>
-                                <exclude reference="gwD-b3-qcv"/>
-                                <exclude reference="qeh-N6-D9x"/>
-                                <exclude reference="AuK-bR-fIk"/>
-                                <exclude reference="byb-Ih-ybX"/>
-                                <exclude reference="kbn-4U-gZZ"/>
-                                <exclude reference="nBc-cz-MqJ"/>
-                                <exclude reference="uPg-9Q-CBK"/>
+                                <exclude reference="4AN-LW-8Jb"/>
+                                <exclude reference="FVN-HS-iRC"/>
+                                <exclude reference="PjX-TD-DKr"/>
+                                <exclude reference="g5O-mk-Xx1"/>
+                                <exclude reference="jIb-2v-bO5"/>
+                                <exclude reference="lPr-hN-37i"/>
+                                <exclude reference="sQa-I8-cml"/>
+                                <exclude reference="u4e-hm-ThN"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -5121,27 +5123,39 @@ Two times at WWDC!</string>
                                 <include reference="BbM-nF-pSR"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="4AN-LW-8Jb"/>
-                                <exclude reference="FVN-HS-iRC"/>
-                                <include reference="PjX-TD-DKr"/>
-                                <exclude reference="g5O-mk-Xx1"/>
-                                <include reference="jIb-2v-bO5"/>
-                                <exclude reference="lPr-hN-37i"/>
-                                <exclude reference="sQa-I8-cml"/>
-                                <exclude reference="u4e-hm-ThN"/>
+                                <exclude reference="17X-1c-82O"/>
+                                <exclude reference="8Or-7s-l9c"/>
+                                <include reference="AuK-bR-fIk"/>
+                                <exclude reference="amS-im-Mr4"/>
+                                <include reference="byb-Ih-ybX"/>
+                                <exclude reference="hEr-MA-L17"/>
+                                <include reference="kbn-4U-gZZ"/>
+                                <include reference="nBc-cz-MqJ"/>
+                                <include reference="uPg-9Q-CBK"/>
+                                <exclude reference="z0t-yv-8Pq"/>
+                                <include reference="24i-T5-rZH"/>
+                                <include reference="25y-p8-sh6"/>
+                                <include reference="26i-zr-An1"/>
+                                <include reference="V7P-fl-Ud1"/>
+                                <exclude reference="W6a-Da-2d6"/>
+                                <include reference="gwD-b3-qcv"/>
+                                <include reference="qeh-N6-D9x"/>
+                                <exclude reference="rlm-4g-Kco"/>
+                                <include reference="uoy-N2-uSM"/>
+                                <exclude reference="zRN-CT-FvA"/>
+                                <exclude reference="84L-P4-1bv"/>
+                                <include reference="L2b-Nb-kBV"/>
+                                <include reference="a0L-Ed-hak"/>
+                                <exclude reference="iHf-3C-km3"/>
+                                <exclude reference="INF-wv-CU7"/>
+                                <exclude reference="K3h-OE-6L2"/>
+                                <include reference="gv2-6v-1Gk"/>
                                 <include reference="C3m-RR-vOq"/>
                                 <exclude reference="CeV-Vn-6ee"/>
                                 <exclude reference="JGi-1x-tpP"/>
                                 <include reference="Qnv-Xc-ETG"/>
                                 <include reference="ZX1-wa-kys"/>
                                 <include reference="miB-VU-5IA"/>
-                                <include reference="Ax6-fn-YTl"/>
-                                <include reference="FPV-gS-6Tk"/>
-                                <include reference="VZO-M8-bcJ"/>
-                                <exclude reference="iHf-3C-km3"/>
-                                <exclude reference="INF-wv-CU7"/>
-                                <exclude reference="K3h-OE-6L2"/>
-                                <include reference="gv2-6v-1Gk"/>
                                 <exclude reference="09J-ra-kiD"/>
                                 <include reference="9bN-x4-6sv"/>
                                 <exclude reference="FPq-Yt-PGH"/>
@@ -5156,25 +5170,14 @@ Two times at WWDC!</string>
                                 <include reference="iaK-5b-xeI"/>
                                 <exclude reference="nuP-Yu-hB0"/>
                                 <exclude reference="t4t-hS-2ax"/>
-                                <include reference="24i-T5-rZH"/>
-                                <include reference="25y-p8-sh6"/>
-                                <include reference="26i-zr-An1"/>
-                                <include reference="V7P-fl-Ud1"/>
-                                <exclude reference="W6a-Da-2d6"/>
-                                <include reference="gwD-b3-qcv"/>
-                                <include reference="qeh-N6-D9x"/>
-                                <exclude reference="rlm-4g-Kco"/>
-                                <exclude reference="zRN-CT-FvA"/>
-                                <exclude reference="17X-1c-82O"/>
-                                <exclude reference="8Or-7s-l9c"/>
-                                <include reference="AuK-bR-fIk"/>
-                                <exclude reference="amS-im-Mr4"/>
-                                <include reference="byb-Ih-ybX"/>
-                                <exclude reference="hEr-MA-L17"/>
-                                <include reference="kbn-4U-gZZ"/>
-                                <include reference="nBc-cz-MqJ"/>
-                                <include reference="uPg-9Q-CBK"/>
-                                <exclude reference="z0t-yv-8Pq"/>
+                                <include reference="4AN-LW-8Jb"/>
+                                <exclude reference="FVN-HS-iRC"/>
+                                <include reference="PjX-TD-DKr"/>
+                                <exclude reference="g5O-mk-Xx1"/>
+                                <include reference="jIb-2v-bO5"/>
+                                <exclude reference="lPr-hN-37i"/>
+                                <exclude reference="sQa-I8-cml"/>
+                                <exclude reference="u4e-hm-ThN"/>
                             </mask>
                         </variation>
                     </view>
